--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     --light:#FCF8F8;
     --med: #F6EFEF;
     --dark: #BCB0B0;
-    --accent: #E4BD99;
+    --accent: #77656B;
 }
 
 body{
@@ -26,6 +26,7 @@ body{
     text-align: left;
     font-weight: 800;
     margin-block-end: 0;
+    text-shadow: 5px 5px 5px rgba(63, 36, 36, 0.2);;
 }
 
 .header h3{
@@ -33,6 +34,7 @@ body{
     font-weight: normal;
     margin-block-start: 0;
     font-size: 15px;
+    color: var(--accent)
 }
 
 .header button{
@@ -64,7 +66,7 @@ button {
     height: 45px;
     border: none;
     border-radius: 10px;
-    box-shadow: 5px 5px 10px rgba(63, 36, 36, 0.2);
+    box-shadow: 5px 5px 5px rgba(63, 36, 36, 0.2);
     min-width: 45px;
     font-weight: 800;
     color: white;
@@ -83,21 +85,23 @@ button img{
     width: auto
 }
 
-form input, form select{
+input, select{
     background: var(--med);
-    margin-right: 5px;
-    margin-left: 10px;
     border-radius: 5px;
-    margin-bottom: 20px;
+    width: 100%
 }
 
-form input, form select, button{
+input, select, button{
     border: none;
     height: 45px;
     padding: 10px;
 }
 
-form select{
+.modal-content input, select{
+    margin-right:10px;
+}
+
+select{
     color: var(--dark);
 }
 
@@ -106,7 +110,7 @@ form select{
     font-size: 15px;
 }
 
-form input:focus{
+input:focus{
     outline: none;
     border-bottom: 5px solid var(--accent);
     padding-bottom: 5px;
@@ -114,11 +118,12 @@ form input:focus{
 }
 
 table {
-    margin-top: 20px;
+    margin-top: 10px;
     width: 100%;
     border-collapse: collapse;
     word-wrap: break-word;
     overflow-x:auto;
+    table-layout: fixed;
 }
 
 table, th, td {
@@ -146,7 +151,9 @@ table h1{
     border-radius: 50px;
     padding-top: 0px;
     padding-bottom: 0px;
+    margin-top: 20px;
     box-shadow: none;
+    /* display: none; */
 }
 
 .tag-table{
@@ -185,11 +192,11 @@ table h1{
 }   
 
 .name {
-    width: 12%;
+    width: 15%;
 }
 
 .shortcut {
-    width: 15%;
+    width: 17%;
 }
 
 .link {
@@ -197,7 +204,11 @@ table h1{
 }
 
 .tag {
-    width: 10%;
+    width: 15%;
+}
+
+.action {
+    width: 5%
 }
 
 td {
