--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body{
     padding-left: 2%;
 }
 
-.header h2{
+h2{
     font-size: 40px;
     text-align: left;
     font-weight: 800;
@@ -29,13 +29,39 @@ body{
     text-shadow: 5px 5px 5px rgba(63, 36, 36, 0.2);;
 }
 
-.header h3{
+h3{
     text-align: left;
     font-weight: normal;
     margin-block-start: 0;
     font-size: 15px;
     color: var(--accent)
 }
+
+.login {
+    width: 100%;
+    height: auto;
+    margin-top: 15%;
+    margin-bottom: auto;
+}
+
+.login button {
+    width: 20%;
+    margin-left: 40%;
+    margin-top: 5%;
+}
+
+.login h2, .login h3{
+    text-align: center;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    width: 100%
+}
+
+.login button{
+    top: 50%;
+  left: 50%;
+}
+
 
 .header button{
     position: absolute;
